--- a/components/slices/Grid/Grid.module.scss
+++ b/components/slices/Grid/Grid.module.scss
@@ -9,6 +9,10 @@
   gap: $space-md;
 }
 
+.headerCenter {
+  justify-content: center;
+}
+
 .grid {
   display: grid;
   width: 100%;
